--- a/aemlet1/about.html
+++ b/aemlet1/about.html
@@ -50,12 +50,12 @@
         <ul>
           <li><a href="about.html">About</a></li>
           <li><a href="rollingstocks.html">Rolling Stock</a></li>
-          <li><a href="">Spares & Components</a></li>
-          <li><a href="">Leasing And Sales</a></li>
-          <li><a href="">Services and Maintenance</a></li>
-          <li><a href="">Core Strength</a></li>
-          <li><a href="">Career</a></li>
-          <li><a href="">Contact Us</a></li>
+          <li><a href="sparecomponents.html">Spares & Components</a></li>
+          <li><a href="leasesales.html">Leasing And Sales</a></li>
+          <li><a href="servicemaintenance.html">Services and Maintenance</a></li>
+          <li><a href="corestrength.html">Core Strength</a></li>
+          <li><a href="career">Career</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -84,7 +84,7 @@
 
         <div class="row position-relative">
 
-          <div class="col-lg-7 about-img" data-aos="zoom-out" data-aos-delay="200"><img src="assets/img/about.jpg"></div>
+          <div class="col-lg-5 about-img" data-aos="zoom-out" data-aos-delay="200"><img src="assets/img/about.jpg"></div>
 
           <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">            
             <div class="our-story">
@@ -224,8 +224,8 @@
         <div class="col-md-2 footer-links">
           <h4>&nbsp;</h4>
           <ul>
-            <li><a href="">Career</a></li>
-            <li><a href="">Contact Us</a></li>
+            <li><a href="career">Career</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </div>
       </div>
