--- a/aemlet1/rollingstocks.html
+++ b/aemlet1/rollingstocks.html
@@ -50,12 +50,12 @@
         <ul>
           <li><a href="about.html">About</a></li>
           <li><a href="rollingstocks.html">Rolling Stock</a></li>
-          <li><a href="">Spares & Components</a></li>
-          <li><a href="">Leasing And Sales</a></li>
-          <li><a href="">Services and Maintenance</a></li>
-          <li><a href="">Core Strength</a></li>
-          <li><a href="">Career</a></li>
-          <li><a href="">Contact Us</a></li>
+          <li><a href="sparecomponents.html">Spares & Components</a></li>
+          <li><a href="leasesales.html">Leasing And Sales</a></li>
+          <li><a href="servicemaintenance.html">Services and Maintenance</a></li>
+          <li><a href="corestrength.html">Core Strength</a></li>
+          <li><a href="career">Career</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -223,8 +223,8 @@
         <div class="col-md-2 footer-links">
           <h4>&nbsp;</h4>
           <ul>
-            <li><a href="">Career</a></li>
-            <li><a href="">Contact Us</a></li>
+            <li><a href="career">Career</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </div>
       </div>
