--- a/aemlet1/servicemaintenance.html
+++ b/aemlet1/servicemaintenance.html
@@ -94,7 +94,7 @@
 <p>We have expertise in corrective maintenance, preventive maintenance, predictive maintenance, systematic preventive maintenance, conditional preventive maintenance. AELMET offers long term onsite maintenance, repairs and services to customers. Our S &amp;amp; M team resolves your problems and brings your business back to normal.</p>
 </div>
 </div>
-<div class="col-md-12">
+<div class="col-md-12 mt-5">
             <p>We meet operational demands for railroads, industrial customers and short line carriers. Talk to our team and make AELMET your reliable partner for purchase or lease of any type of new or used locomotive, various types of wagons, locomotive components, locomotive engines, traction motors, main generators, compressors, wheel sets, and annual maintenance contract.</p>
             <p>As part of Maintenance Service Agreements, our technical service and maintenance team is available on-site to repair, refurbish and upgrade your desired locomotive, wagons, motors, and engines to meet your operation needs.</p>
             <p>If required, our service crew, travel to your site to repair/service/replace the required parts in your own shops under our supervision, ensuring the highest level of quality. Our contract maintenance & business assurance plans ensures that your rolling stocks fleet is expertly maintained to OEM standards.</p>
