--- a/aemlet1/contact.html
+++ b/aemlet1/contact.html
@@ -28,6 +28,13 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
+  <!-- =======================================================
+  * Template Name: UpConstruction
+  * Template URL: https://bootstrapmade.com/upconstruction-bootstrap-construction-website-template/
+  * Updated: Jun 29 2024 with Bootstrap v5.3.3
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
 </head>
 
 <body class="contact-page">
@@ -38,7 +45,8 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Aelmet</h1> <span>.</span>
+        <!-- <h1 class="sitename">Aelmet</h1><span>.</span> -->
+         <img src="assets/img/logo.jpeg"/>
       </a>
       <nav id="navmenu" class="navmenu">
         <ul>
@@ -48,7 +56,7 @@
           <li><a href="leasesales.html">Leasing And Sales</a></li>
           <li><a href="servicemaintenance.html">Services and Maintenance</a></li>
           <li><a href="corestrength.html">Core Strength</a></li>
-          <li><a href="career">Career</a></li>
+          <li><a href="career.html">Career</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -60,7 +68,7 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title dark-background" style="background-image: url(assets/img/page-title-bg.jpg);">
+    <div class="page-title dark-background" style="background-image: url(assets/img/contact.jpg);">
       <div class="container position-relative">
         <h1>Contact</h1>
         <nav class="breadcrumbs">
@@ -79,7 +87,7 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-6">
+          <div class="col-md-6">
             <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="200">
               <i class="bi bi-geo-alt"></i>
               <h3>Address</h3>
@@ -90,17 +98,7 @@
             </div>
           </div><!-- End Info Item -->
 
-          <div class="col-lg-3 col-md-6">
-            <div class="info-item d-flex flex-column justify-content-center align-items-center p-3" data-aos="fade-up" data-aos-delay="300">
-              <i class="bi bi-telephone"></i>
-              <h3>Call Us</h3>
-              <p class="pb-2 border-bottom mb-2"><strong>USA: </strong>+1 972 781 9812 , 646 727 9579 Fax: 469 277 7454</p>
-              <p><strong>CANADA: </strong>strong>+1 647 932 6481 Fax: 905 712 9628</p>
-
-            </div>
-          </div><!-- End Info Item -->
-
-          <div class="col-lg-3 col-md-6">
+          <div class=" col-md-6">
             <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-envelope"></i>
               <h3>Email Us</h3>
@@ -109,109 +107,48 @@
               <p><strong>Sales : </strong>sales@aelmet.com</p>
               <p><strong>Procurement :</strong> store@aelmet.com</p>
               <p><strong>Human Resource :</strong> hr@aelmet.com</p>
-
-          
             </div>
           </div><!-- End Info Item -->
-
         </div>
-
-        <div class="row gy-4 mt-1">
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 400px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </div><!-- End Google Maps -->
-
-          <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="400">
-              <div class="row gy-4">
-
-                <div class="col-md-6">
-                  <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
-                </div>
-
-                <div class="col-md-6 ">
-                  <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
-                </div>
-
-                <div class="col-md-12">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
-                </div>
-
-                <div class="col-md-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
-                </div>
-
-                <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-
-                  <button type="submit">Send Message</button>
-                </div>
-
-              </div>
-            </form>
-          </div><!-- End Contact Form -->
-
-        </div>
-
       </div>
-
     </section><!-- /Contact Section -->
-
   </main>
   <footer id="footer" class="footer dark-background">
-
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">Aelmet</span>
+            <img class="footer-logo" src="assets/img/logo.jpeg"/>
           </a>
-          <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
-          </div>
-          <!-- <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
-          </div> -->
         </div>
-
         <div class="col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
             <li><a href="about.html">About</a></li>
-            <li><a href="">Rolling Stock</a></li>
-            <li><a href="">Spares & Components</a></li>
+            <li><a href="rollingstocks.html">Rolling Stock</a></li>
+            <li><a href="sparecomponents.html">Spares & Components</a></li>
           </ul>
         </div>
         <div class="col-md-3 footer-links">
           <h4>&nbsp;</h4>
           <ul>
-          <li><a href="">Leasing And Sales</a></li>
-          <li><a href="">Services and Maintenance</a></li>
-          <li><a href="">Core Strength</a></li>
+          <li><a href="leasesales.html">Leasing And Sales</a></li>
+          <li><a href="service-details.html">Services and Maintenance</a></li>
+          <li><a href="corestrength.html">Core Strength</a></li>
           </ul>
         </div>
         <div class="col-md-2 footer-links">
           <h4>&nbsp;</h4>
           <ul>
-            <li><a href="career">Career</a></li>
+            <li><a href="career.html">Career</a></li>
             <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </div>
       </div>
     </div>
-
     <div class="container copyright text-center mt-4">
       <p>© <span>Copyright</span> <strong class="px-1 sitename">Aelmet</strong> <span>All Rights Reserved</span></p>
     </div>
-
   </footer>
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
