--- a/aemlet1/locomotive.html
+++ b/aemlet1/locomotive.html
@@ -66,90 +66,64 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title dark-background" style="background-image: url(assets/img/about-bg.jpg);">
+    <div class="page-title dark-background" style="background-image: url(assets/img/page-title-bg.jpg);">
       <div class="container position-relative">
-        <h1>About</h1>
+        <h1>Locomotives</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">About</li>
+            <li class="current">Locomotives</li>
           </ol>
         </nav>
       </div>
     </div><!-- End Page Title -->
 
-    <!-- About Section -->
-    <section id="about" class="about section">
-
+     <!-- Services Section -->
+     <section id="services" class="services section light-background">
       <div class="container">
-
-        <div class="row position-relative">
-
-          <div class="col-lg-5 about-img" data-aos="zoom-out" data-aos-delay="200"><img src="assets/img/about.jpg"></div>
-
-          <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">            
-            <div class="our-story">
-              <h3 class="">About Us</h3>
-              <p>Applied Electrical and Mechanical Technology, AELMET Corporation is the leading rail road products and services
-                provider. AELMET offers leading rail road technologies, engineering machineries, consulting services, and project
-                management. AELMET has been serving transportation and rail road clients with R&amp;D, design, manufacturing,
-                repair, sale, lease and technical services. We meet our client’s requirements and expectations with our custom
-                made world-class products like High-power locomotives, Bogie trucks, Passenger coaches, Wheels and axles, Brake
-                disks, Test Equipment, Freight wagons, and track machineries. Whether it is complex geographical &amp; environments
-                challenges or diverse socio economic market, we have products and solutions for all.</p>
-            </div>
-          </div>
-
+        <div class="row gy-4">
+          <h5>Content needs sorted for Locomotives.</h5>
         </div>
-
-      </div>
-
-    </section><!-- /About Section -->
-
-    <!-- Alt Services Section -->
-    <section id="alt-services" class="alt-services section">
-
-      <div class="container">
-
-        <div class="row justify-content-around gy-4">
-          <div class="col-lg-10 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
-            <h3>Technological innovation and continuous</h3>
-            <p>Technological innovation and continuous research and development have been our strength to envisage a safer,
-              high quality, reliable, and affordable mode of rail connectivity across the world. We aim to attain sustainable
-              development of railway transportation with our energy-efficient, eco-friendly, cost effective, intelligent, high speed
-              and comfortable mobility.</p>
-          </div>
-        </div>
-      </div>
-
-    </section><!-- /Alt Services Section -->
+       </div>   
+    </section><!-- /Services Section -->
+  
 
   </main>
-
   <footer id="footer" class="footer dark-background">
-
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <img class="footer-logo" src="assets/img/logo.jpeg"/>
+            <span class="sitename">Aelmet</span>
           </a>
+          <div class="footer-contact pt-3">
+            <p>A108 Adam Street</p>
+            <p>New York, NY 535022</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
+            <p><strong>Email:</strong> <span>info@example.com</span></p>
+          </div>
+          <!-- <div class="social-links d-flex mt-4">
+            <a href=""><i class="bi bi-twitter-x"></i></a>
+            <a href=""><i class="bi bi-facebook"></i></a>
+            <a href=""><i class="bi bi-instagram"></i></a>
+            <a href=""><i class="bi bi-linkedin"></i></a>
+          </div> -->
         </div>
 
         <div class="col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
             <li><a href="about.html">About</a></li>
-            <li><a href="rollingstocks.html">Rolling Stock</a></li>
-            <li><a href="sparecomponents.html">Spares & Components</a></li>
+            <li><a href="">Rolling Stock</a></li>
+            <li><a href="">Spares & Components</a></li>
           </ul>
         </div>
         <div class="col-md-3 footer-links">
           <h4>&nbsp;</h4>
           <ul>
-          <li><a href="leasesales.html">Leasing And Sales</a></li>
-          <li><a href="service-details.html">Services and Maintenance</a></li>
-          <li><a href="corestrength.html">Core Strength</a></li>
+          <li><a href="">Leasing And Sales</a></li>
+          <li><a href="">Services and Maintenance</a></li>
+          <li><a href="">Core Strength</a></li>
           </ul>
         </div>
         <div class="col-md-2 footer-links">
