--- a/aemlet1/projects.html
+++ b/aemlet1/projects.html
@@ -42,10 +42,11 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a href="index.html" class="">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">UpConstruction</h1> <span>.</span>
+        <!-- <h1 class="sitename">Aelmet</h1><span>.</span> -->
+         <img src="assets/img/logo.jpeg"/>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -271,7 +272,7 @@
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
-          <a href="index.html" class="logo d-flex align-items-center">
+          <a href="index.html" class="">
             <span class="sitename">UpConstruction</span>
           </a>
           <div class="footer-contact pt-3">
