--- a/aemlet1/rollingstocks.html
+++ b/aemlet1/rollingstocks.html
@@ -44,7 +44,8 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Aelmet</h1><span>.</span>
+        <!-- <h1 class="sitename">Aelmet</h1><span>.</span> -->
+         <img src="assets/img/logo.jpeg"/>
       </a>
       <nav id="navmenu" class="navmenu">
         <ul>
@@ -54,7 +55,7 @@
           <li><a href="leasesales.html">Leasing And Sales</a></li>
           <li><a href="servicemaintenance.html">Services and Maintenance</a></li>
           <li><a href="corestrength.html">Core Strength</a></li>
-          <li><a href="career">Career</a></li>
+          <li><a href="career.html">Career</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -65,7 +66,7 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title dark-background" style="background-image: url(assets/img/locomotive.jpg);">
+    <div class="page-title dark-background" style="background-image: url(assets/img/locomotive.png);">
       <div class="container position-relative">
         <h1>Rolling Stocks</h1>
         <nav class="breadcrumbs">
@@ -77,109 +78,46 @@
       </div>
     </div><!-- End Page Title -->
 
-    <!-- About Section -->
-    <section id="about" class="about section">
-
-      <div class="container">
-
-        <div class="row position-relative">
-
-          <div class="col-lg-7 about-img" data-aos="zoom-out" data-aos-delay="200"><img src="assets/img/services.jpg"></div>
-
-          <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">            
-            <div class="our-story">
-              <p>Applied Electrical and Mechanical Technology, AELMET Corporation is the leading rail road products and services
-                provider. AELMET offers leading rail road technologies, engineering machineries, consulting services, and project
-                management. AELMET has been serving transportation and rail road clients with R&amp;D, design, manufacturing,
-                repair, sale, lease and technical services. We meet our client’s requirements and expectations with our custom
-                made world-class products like High-power locomotives, Bogie trucks, Passenger coaches, Wheels and axles, Brake
-                disks, Test Equipment, Freight wagons, and track machineries. Whether it is complex geographical &amp; environments
-                challenges or diverse socio economic market, we have products and solutions for all.</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-
-    </section><!-- /About Section -->
 
     <!-- Alt Services Section -->
     <section id="alt-services" class="alt-services section">
-
       <div class="container">
-
         <div class="row justify-content-around gy-4">
           <div class="col-lg-10 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
-            <h3>Technological innovation and continuous</h3>
-            <p>Technological innovation and continuous research and development have been our strength to envisage a safer,
-              high quality, reliable, and affordable mode of rail connectivity across the world. We aim to attain sustainable
-              development of railway transportation with our energy-efficient, eco-friendly, cost effective, intelligent, high speed
-              and comfortable mobility.</p>
+            <h3>Rolling Stocks</h3>
+            <p>AELMET offers designing, manufacturing, testing, commissioning and maintenance of locomotives and rolling stock, including electric locomotives and diesel-electric locomotives. We hold strong capabilities in  manufacturing, customized maintenance and servicing of passenger coaches, freight wagons in ranges of covered wagons, open-top wagons, hopper wagons , flat wagons, double-deck container flat wagons, tanker wagons for all types of liquid and chemicals, tipper wagons, and depressed center wagons to meet market requirements. Built on proven design and engineering standards, all rolling stocks can easily be tailored to individual customer needs.</p>
+            <p>Contact our team to meet your needs and exceed your expectations.</p>
           </div>
         </div>
       </div>
-
     </section><!-- /Alt Services Section -->
     <!-- Alt Services 2 Section -->
     <section id="alt-services-2" class="alt-services-2 section">
-
       <div class="container">
-
         <div class="row justify-content-around gy-4">
-
-          <div class="col-lg-6 d-flex flex-column justify-content-center order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-4 d-flex flex-column order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
             <h3>Locomotives</h3>
-            <p>Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed minima temporibus laudantium. Soluta voluptate sed facere corporis dolores excepturi</p>
-
-            <div class="row">
-
-              <div class="col-lg-6 icon-box d-flex">
-                <i class="bi bi-easel flex-shrink-0"></i>
-                <div>
-                  <h4>Lorem Ipsum</h4>
-                  <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias </p>
-                </div>
-              </div><!-- End Icon Box -->
-
-              <div class="col-lg-6 icon-box d-flex">
-                <i class="bi bi-patch-check flex-shrink-0"></i>
-                <div>
-                  <h4>Nemo Enim</h4>
-                  <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiise</p>
-                </div>
-              </div><!-- End Icon Box -->
-
-              <div class="col-lg-6 icon-box d-flex">
-                <i class="bi bi-brightness-high flex-shrink-0"></i>
-                <div>
-                  <h4>Dine Pad</h4>
-                  <p>Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit</p>
-                </div>
-              </div><!-- End Icon Box -->
-
-              <div class="col-lg-6 icon-box d-flex">
-                <i class="bi bi-brightness-high flex-shrink-0"></i>
-                <div>
-                  <h4>Tride clov</h4>
-                  <p>Est voluptatem labore deleniti quis a delectus et. Saepe dolorem libero sit</p>
-                </div>
-              </div><!-- End Icon Box -->
-
-            </div>
-
+            <p>Our fleet consists of both 4- and 6-axle locomotives available for various tasks.AELMET offers designing, manufacturing, testing, commissioning and maintenance of locomotives and rolling stock, including electric locomotives and diesel-electric locomotives. </p>
+            <a href="locomotive.html" type="button" class="btn btn-outline-primary btn-otline-alm-primary">Know More</a>
           </div>
-
-          <div class="features-image col-lg-5 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/locomotive.jpg" alt="">
+          <div class="col-lg-5 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
+            <img src="assets/img/locomotive.png" class="img-fliud w-100">
           </div>
-
         </div>
-
       </div>
-
-    </section><!-- /Alt Services 2 Section -->
-
+      <hr class="pt-5 mt-5 mb-0">
+      <div class="container mt-2">
+        <div class="row justify-content-around gy-4">
+          <div class="col-lg-4 d-flex flex-column order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
+            <h3>Railcars</h3>
+            <p>We offer both bi-level and tri-level auto rack fleet for the transportation of motor vehicles. </p>
+            <a href="railcars.html" type="button" class="btn btn-outline-primary btn-otline-alm-primary">Know More</a>
+          </div>
+          <div class="col-lg-5 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
+            <img src="assets/img/gonalds.png" alt="">
+          </div>
+        </div>
+      </div>    </section><!-- /Alt Services 2 Section -->
   </main>
 
   <footer id="footer" class="footer dark-background">
@@ -188,42 +126,30 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">Aelmet</span>
+            <img class="footer-logo" src="assets/img/logo.jpeg"/>
           </a>
-          <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
-          </div>
-          <!-- <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
-          </div> -->
         </div>
 
         <div class="col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
             <li><a href="about.html">About</a></li>
-            <li><a href="">Rolling Stock</a></li>
-            <li><a href="">Spares & Components</a></li>
+            <li><a href="rollingstocks.html">Rolling Stock</a></li>
+            <li><a href="sparecomponents.html">Spares & Components</a></li>
           </ul>
         </div>
         <div class="col-md-3 footer-links">
           <h4>&nbsp;</h4>
           <ul>
-          <li><a href="">Leasing And Sales</a></li>
-          <li><a href="">Services and Maintenance</a></li>
-          <li><a href="">Core Strength</a></li>
+          <li><a href="leasesales.html">Leasing And Sales</a></li>
+          <li><a href="service-details.html">Services and Maintenance</a></li>
+          <li><a href="corestrength.html">Core Strength</a></li>
           </ul>
         </div>
         <div class="col-md-2 footer-links">
           <h4>&nbsp;</h4>
           <ul>
-            <li><a href="career">Career</a></li>
+            <li><a href="career.html">Career</a></li>
             <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </div>
