--- a/aemlet1/career.html
+++ b/aemlet1/career.html
@@ -41,10 +41,11 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center">
+     <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Aelmet</h1><span>.</span>
+        <!-- <h1 class="sitename">Aelmet</h1><span>.</span> -->
+         <img src="assets/img/logo.jpeg"/>
       </a>
       <nav id="navmenu" class="navmenu">
         <ul>
@@ -54,7 +55,7 @@
           <li><a href="leasesales.html">Leasing And Sales</a></li>
           <li><a href="servicemaintenance.html">Services and Maintenance</a></li>
           <li><a href="corestrength.html">Core Strength</a></li>
-          <li><a href="career">Career</a></li>
+          <li><a href="career.html">Career</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -65,13 +66,13 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title dark-background" style="background-image: url(assets/img/page-title-bg.jpg);">
+    <div class="page-title dark-background" style="background-image: url(assets/img/career.webp);">
       <div class="container position-relative">
-        <h1>About</h1>
+        <h1>Career</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">About</li>
+            <li class="current">Career</li>
           </ol>
         </nav>
       </div>
@@ -84,19 +85,32 @@
 
         <div class="row position-relative">
 
-          <div class="col-lg-7 about-img" data-aos="zoom-out" data-aos-delay="200"><img src="assets/img/about.jpg"></div>
 
-          <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">            
+          <div class="col-lg-12" data-aos="fade-up" data-aos-delay="100">            
             <div class="our-story">
-              <h3 class="">About Us</h3>
-              <p>Applied Electrical and Mechanical Technology, AELMET Corporation is the leading rail road products and services
-                provider. AELMET offers leading rail road technologies, engineering machineries, consulting services, and project
-                management. AELMET has been serving transportation and rail road clients with R&amp;D, design, manufacturing,
-                repair, sale, lease and technical services. We meet our client’s requirements and expectations with our custom
-                made world-class products like High-power locomotives, Bogie trucks, Passenger coaches, Wheels and axles, Brake
-                disks, Test Equipment, Freight wagons, and track machineries. Whether it is complex geographical &amp; environments
-                challenges or diverse socio economic market, we have products and solutions for all.</p>
+              <h3 class="">Career</h3>
+              <p>We value our employees as our working partners. Our employees are out strength to success. Skills, knowledge, education and experience of each person are valuable for organizational growth and success. We respect our relationships with employees, colleagues, and clients. Our principle of Shared Ownership drives our organization to achieve our mission of safe, secured, profitable, reliable and cost effective business.</p>
+
+              <div class="row content">
+                <p><strong>We have following openings:</strong></p>
+                <ol>
+                <li>Regional Manager Business Development : North Africa based in Cairo, Egypt</li>
+                <li>Regional Manager Business Development : South Africa based in Johannesburg</li>
+                <li>Regional Manager Business Development : West Africa based in Dakar, Senegal</li>
+                <li>Regional Manager Business Development : East Europe based in Moscow, Russia</li>
+                <li>Regional Manager Business Development : Latin America based in Buenos Aires, Argentina</li>
+                <li>Regional Manager Business Development : USA based in Fort Worth , TX and Chicago, IL</li>
+                <li>Regional Manager Business Development : ASEAN based in Vietnam</li>
+                <li>Regional Manager Business Development : India, based in Kolkota</li>
+                <li>Product Specialist ; India</li>
+                <li>Procurement Specialist: USA</li>
+                <li>Channel Partner Manager: USA</li>
+                <li>Marketing and Communication Manager: USA</li>
+                </ol>
+                </div>
             </div>
+            <p class="mt-2">Intrigued? Learn more about each position by writing to <a href="#">hr@aelmet.com</a></p>
+
           </div>
 
         </div>
@@ -105,81 +119,6 @@
 
     </section><!-- /About Section -->
 
-    <!-- Alt Services Section -->
-    <section id="alt-services" class="alt-services section">
-
-      <div class="container">
-
-        <div class="row justify-content-around gy-4">
-          <div class="col-lg-10 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
-            <h3>Technological innovation and continuous</h3>
-            <p>Technological innovation and continuous research and development have been our strength to envisage a safer,
-              high quality, reliable, and affordable mode of rail connectivity across the world. We aim to attain sustainable
-              development of railway transportation with our energy-efficient, eco-friendly, cost effective, intelligent, high speed
-              and comfortable mobility.</p>
-          </div>
-        </div>
-      </div>
-
-    </section><!-- /Alt Services Section -->
-    <!-- Alt Services 2 Section -->
-    <section id="alt-services-2" class="alt-services-2 section">
-
-      <div class="container">
-
-        <div class="row justify-content-around gy-4">
-
-          <div class="col-lg-6 d-flex flex-column justify-content-center order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
-            <h3>Enim quis est voluptatibus aliquid consequatur</h3>
-            <p>Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed minima temporibus laudantium. Soluta voluptate sed facere corporis dolores excepturi</p>
-
-            <div class="row">
-
-              <div class="col-lg-6 icon-box d-flex">
-                <i class="bi bi-easel flex-shrink-0"></i>
-                <div>
-                  <h4>Lorem Ipsum</h4>
-                  <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias </p>
-                </div>
-              </div><!-- End Icon Box -->
-
-              <div class="col-lg-6 icon-box d-flex">
-                <i class="bi bi-patch-check flex-shrink-0"></i>
-                <div>
-                  <h4>Nemo Enim</h4>
-                  <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiise</p>
-                </div>
-              </div><!-- End Icon Box -->
-
-              <div class="col-lg-6 icon-box d-flex">
-                <i class="bi bi-brightness-high flex-shrink-0"></i>
-                <div>
-                  <h4>Dine Pad</h4>
-                  <p>Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit</p>
-                </div>
-              </div><!-- End Icon Box -->
-
-              <div class="col-lg-6 icon-box d-flex">
-                <i class="bi bi-brightness-high flex-shrink-0"></i>
-                <div>
-                  <h4>Tride clov</h4>
-                  <p>Est voluptatem labore deleniti quis a delectus et. Saepe dolorem libero sit</p>
-                </div>
-              </div><!-- End Icon Box -->
-
-            </div>
-
-          </div>
-
-          <div class="features-image col-lg-5 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/features-3-2.jpg" alt="">
-          </div>
-
-        </div>
-
-      </div>
-
-    </section><!-- /Alt Services 2 Section -->
 
   </main>
 
@@ -188,43 +127,31 @@
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
-          <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">Aelmet</span>
+          <a href="index.html" >
+            <img class="footer-logo" src="assets/img/logo.jpeg"/>
           </a>
-          <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
-          </div>
-          <!-- <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
-          </div> -->
         </div>
 
         <div class="col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
             <li><a href="about.html">About</a></li>
-            <li><a href="">Rolling Stock</a></li>
-            <li><a href="">Spares & Components</a></li>
+            <li><a href="rollingstocks.html">Rolling Stock</a></li>
+            <li><a href="sparecomponents.html">Spares & Components</a></li>
           </ul>
         </div>
         <div class="col-md-3 footer-links">
           <h4>&nbsp;</h4>
           <ul>
-          <li><a href="">Leasing And Sales</a></li>
-          <li><a href="">Services and Maintenance</a></li>
-          <li><a href="">Core Strength</a></li>
+          <li><a href="leasesales.html">Leasing And Sales</a></li>
+          <li><a href="service-details.html">Services and Maintenance</a></li>
+          <li><a href="corestrength.html">Core Strength</a></li>
           </ul>
         </div>
         <div class="col-md-2 footer-links">
           <h4>&nbsp;</h4>
           <ul>
-            <li><a href="career">Career</a></li>
+            <li><a href="career.html">Career</a></li>
             <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </div>
