--- a/aemlet1/leasesales.html
+++ b/aemlet1/leasesales.html
@@ -41,10 +41,12 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
 
+     
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Aelmet</h1><span>.</span>
+        <!-- <h1 class="sitename">Aelmet</h1><span>.</span> -->
+         <img src="assets/img/logo.jpeg"/>
       </a>
       <nav id="navmenu" class="navmenu">
         <ul>
@@ -54,7 +56,7 @@
           <li><a href="leasesales.html">Leasing And Sales</a></li>
           <li><a href="servicemaintenance.html">Services and Maintenance</a></li>
           <li><a href="corestrength.html">Core Strength</a></li>
-          <li><a href="career">Career</a></li>
+          <li><a href="career.html">Career</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -65,7 +67,7 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title dark-background" style="background-image: url(assets/img/page-title-bg.jpg);">
+    <div class="page-title dark-background" style="background-image: url(assets/img/leasing.jpg);">
       <div class="container position-relative">
         <h1>Leasing And Sales</h1>
         <nav class="breadcrumbs">
@@ -117,42 +119,30 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">Aelmet</span>
+            <img class="footer-logo" src="assets/img/logo.jpeg"/>
           </a>
-          <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
-          </div>
-          <!-- <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
-          </div> -->
         </div>
 
         <div class="col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
             <li><a href="about.html">About</a></li>
-            <li><a href="">Rolling Stock</a></li>
-            <li><a href="">Spares & Components</a></li>
+            <li><a href="rollingstocks.html">Rolling Stock</a></li>
+            <li><a href="sparecomponents.html">Spares & Components</a></li>
           </ul>
         </div>
         <div class="col-md-3 footer-links">
           <h4>&nbsp;</h4>
           <ul>
-          <li><a href="">Leasing And Sales</a></li>
-          <li><a href="">Services and Maintenance</a></li>
-          <li><a href="">Core Strength</a></li>
+          <li><a href="leasesales.html">Leasing And Sales</a></li>
+          <li><a href="service-details.html">Services and Maintenance</a></li>
+          <li><a href="corestrength.html">Core Strength</a></li>
           </ul>
         </div>
         <div class="col-md-2 footer-links">
           <h4>&nbsp;</h4>
           <ul>
-            <li><a href="career">Career</a></li>
+            <li><a href="career.html">Career</a></li>
             <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </div>
