--- a/aemlet1/service-details.html
+++ b/aemlet1/service-details.html
@@ -45,7 +45,8 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">UpConstruction</h1> <span>.</span>
+        <!-- <h1 class="sitename">Aelmet</h1><span>.</span> -->
+         <img src="assets/img/logo.jpeg"/>
       </a>
 
       <nav id="navmenu" class="navmenu">
