--- a/aemlet1/servicemaintenance.html
+++ b/aemlet1/servicemaintenance.html
@@ -44,7 +44,8 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Aelmet</h1><span>.</span>
+        <!-- <h1 class="sitename">Aelmet</h1><span>.</span> -->
+         <img src="assets/img/logo.jpeg"/>
       </a>
       <nav id="navmenu" class="navmenu">
         <ul>
@@ -54,7 +55,7 @@
           <li><a href="leasesales.html">Leasing And Sales</a></li>
           <li><a href="servicemaintenance.html">Services and Maintenance</a></li>
           <li><a href="corestrength.html">Core Strength</a></li>
-          <li><a href="career">Career</a></li>
+          <li><a href="career.html">Career</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -65,7 +66,7 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title dark-background" style="background-image: url(assets/img/page-title-bg.jpg);">
+    <div class="page-title dark-background" style="background-image: url(assets/img/railwheel-grey.jpg);">
       <div class="container position-relative">
         <h1>Services and Maintenance</h1>
         <nav class="breadcrumbs">
@@ -84,24 +85,22 @@
 
         <div class="row position-relative">
 
-          <div class="col-lg-5 about-img" data-aos="zoom-out" data-aos-delay="200"><img src="assets/img/about.jpg"></div>
+          <div class="col-lg-5 about-img" data-aos="zoom-out" data-aos-delay="200"><img src="assets/img/railwheel-grey.jpg"></div>
 
           <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">            
             <div class="our-story">
               <h3 class="">Services and Maintenance</h3>
               <p>AELMET recognizes each customers opportunities, time, responsibilities, safety and money. To meet customer expectation in time and under budget is our goal. Our service team is available for in-time assistance and door-to- door services.</p>
 
-<p>We have expertise in corrective maintenance, preventive maintenance, predictive maintenance, systematic preventive maintenance, conditional preventive maintenance. AELMET offers long term onsite maintenance, repairs and services to customers. Our S &amp;amp; M team resolves your problems and brings your business back to normal.</p>
-</div>
-</div>
-<div class="col-md-12 mt-5">
-            <p>We meet operational demands for railroads, industrial customers and short line carriers. Talk to our team and make AELMET your reliable partner for purchase or lease of any type of new or used locomotive, various types of wagons, locomotive components, locomotive engines, traction motors, main generators, compressors, wheel sets, and annual maintenance contract.</p>
-            <p>As part of Maintenance Service Agreements, our technical service and maintenance team is available on-site to repair, refurbish and upgrade your desired locomotive, wagons, motors, and engines to meet your operation needs.</p>
-            <p>If required, our service crew, travel to your site to repair/service/replace the required parts in your own shops under our supervision, ensuring the highest level of quality. Our contract maintenance & business assurance plans ensures that your rolling stocks fleet is expertly maintained to OEM standards.</p>
-          </div>
-
+            <p>We have expertise in corrective maintenance, preventive maintenance, predictive maintenance, systematic preventive maintenance, conditional preventive maintenance. AELMET offers long term onsite maintenance, repairs and services to customers. Our S &amp;amp; M team resolves your problems and brings your business back to normal.</p>
+            </div>
+            </div>
+            <div class="col-md-12 mt-5">
+              <p>We meet operational demands for railroads, industrial customers and short line carriers. Talk to our team and make AELMET your reliable partner for purchase or lease of any type of new or used locomotive, various types of wagons, locomotive components, locomotive engines, traction motors, main generators, compressors, wheel sets, and annual maintenance contract.</p>
+              <p>As part of Maintenance Service Agreements, our technical service and maintenance team is available on-site to repair, refurbish and upgrade your desired locomotive, wagons, motors, and engines to meet your operation needs.</p>
+              <p>If required, our service crew, travel to your site to repair/service/replace the required parts in your own shops under our supervision, ensuring the highest level of quality. Our contract maintenance & business assurance plans ensures that your rolling stocks fleet is expertly maintained to OEM standards.</p>
+            </div>
         </div>
-
       </div>
 
     </section><!-- /About Section -->
@@ -117,42 +116,30 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">Aelmet</span>
+            <img class="footer-logo" src="assets/img/logo.jpeg"/>
           </a>
-          <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
-          </div>
-          <!-- <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
-          </div> -->
         </div>
 
         <div class="col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
             <li><a href="about.html">About</a></li>
-            <li><a href="">Rolling Stock</a></li>
-            <li><a href="">Spares & Components</a></li>
+            <li><a href="rollingstocks.html">Rolling Stock</a></li>
+            <li><a href="sparecomponents.html">Spares & Components</a></li>
           </ul>
         </div>
         <div class="col-md-3 footer-links">
           <h4>&nbsp;</h4>
           <ul>
-          <li><a href="">Leasing And Sales</a></li>
-          <li><a href="">Services and Maintenance</a></li>
-          <li><a href="">Core Strength</a></li>
+          <li><a href="leasesales.html">Leasing And Sales</a></li>
+          <li><a href="service-details.html">Services and Maintenance</a></li>
+          <li><a href="corestrength.html">Core Strength</a></li>
           </ul>
         </div>
         <div class="col-md-2 footer-links">
           <h4>&nbsp;</h4>
           <ul>
-            <li><a href="career">Career</a></li>
+            <li><a href="career.html">Career</a></li>
             <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </div>
